...
            }
        }
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        searchList.accessibilityLabel = "SearchList"
        searchList.separatorColor = UIColor.clear
        searchList.isHidden = true
        searchListDataSource = SearchListDataSource()
        searchListDataSource?.viewController = self
        searchList.dataSource = searchListDataSource
        searchList.delegate = searchListDataSource
...
